[package]
name = "imgapi"
version = "0.2.0"
edition = "2021"
description = "Types and Builders/helpers to use TritonDatacenter imgapi in rust"
license="MPL-2.0"
homepage="https://github.com/solarm-project/imgapi"
repository="https://github.com/solarm-project/imgapi"

[dependencies]
serde = { version="1", features = ["derive"] }
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1.8", features = ["serde"] }
derive_builder = "0.12.0"
thiserror = "1.0.40"
miette = "5.6.0"
strum = { version = "0.24.1", features = ["derive"] }

[dev-dependencies]
miette = { version = "5.6.0", features = ["fancy"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
long_tests = []
